--- a/doc/program_ref.tex
+++ b/doc/program_ref.tex
@@ -128,7 +128,7 @@ call f(buf, shls, atm, natm, bas, nbas, env)
     of the ith basis
   \end{itemize}
 \item
-  parameters are the same to the C function. Note those offsets
+  parameters are the same to the C function. Note that those offsets
   atm(2,i) bas(6,i) bas(7,i) are 0-based.
 \item
   buf is 2D/4D double precision/double complex array
@@ -242,210 +242,216 @@ is
 \begin{itemize}
 \item
   Cartesian GTO integrals
-\item
-  \verb!cgto_cart!\\
-\item
-  \verb!cint1e_ovlp_cart! \[\langle i| j\rangle \]
-\item
-  \verb!cint1e_nuc_cart! \[\langle i| V_{nuc} | j\rangle \]
-\item
-  \verb!cint1e_kin_cart!
-  \[.5\langle i| \vec{p} \cdot \vec{p} j\rangle \]
-\item
-  \verb!cint1e_ia01p_cart!
-  \[\langle i| \frac{\vec{r}}{r^3}| \times \vec{\nabla} j\rangle \]
-\item
-  \verb!cint1e_irxp_cart!
-  \[\langle i| \vec{r}_c \times \vec{\nabla} j\rangle \]
-\item
-  \verb!cint1e_iking_cart!
-  \[0.5i\langle \vec{p} \cdot \vec{p} i| U_gj\rangle \]
-\item
-  \verb!cint1e_iovlpg_cart! \[i \langle i| U_gj\rangle \]
-\item
-  \verb!cint1e_inucg_cart! \[i \langle i| V_{nuc}| U_gj\rangle \]
-\item
-  \verb!cint1e_ipovlp_cart! \[\langle \vec{\nabla} i|j\rangle \]
-\item
-  \verb!cint1e_ipkin_cart!
-  \[0.5\langle \vec{\nabla} i| \vec{p} \cdot \vec{p} j\rangle \]
-\item
-  \verb!cint1e_ipnuc_cart!
-  \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
-\item
-  \verb!cint1e_iprinv_cart!
-  \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
-\item
-  \verb!cint1e_rinv_cart! \[\langle i| r^{-1} |j\rangle \]
-\item
-  \verb!cint2e_cart! \[(ij|kl)\]
-\item
-  \verb!cint2e_ig1_cart! \[i(i U_g j|kl)\]
-\item
-  \verb!cint2e_ip1_cart! \[(\vec{\nabla} i j|kl)\]
-
+  \begin{itemize}
+  \item
+    \verb!cgto_cart(int ishell, int bas[])!: Number of cartesian
+    functions of the given shell
+  \item
+    \verb!cint1e_ovlp_cart! \[\langle i| j\rangle \]
+  \item
+    \verb!cint1e_nuc_cart! \[\langle i| V_{nuc} | j\rangle \]
+  \item
+    \verb!cint1e_kin_cart!
+    \[.5\langle i| \vec{p} \cdot \vec{p} j\rangle \]
+  \item
+    \verb!cint1e_ia01p_cart!
+    \[\langle i| \frac{\vec{r}}{r^3}| \times \vec{\nabla} j\rangle \]
+  \item
+    \verb!cint1e_irxp_cart!
+    \[\langle i| \vec{r}_c \times \vec{\nabla} j\rangle \]
+  \item
+    \verb!cint1e_iking_cart!
+    \[0.5i\langle \vec{p} \cdot \vec{p} i| U_gj\rangle \]
+  \item
+    \verb!cint1e_iovlpg_cart! \[i \langle i| U_gj\rangle \]
+  \item
+    \verb!cint1e_inucg_cart! \[i \langle i| V_{nuc}| U_gj\rangle \]
+  \item
+    \verb!cint1e_ipovlp_cart! \[\langle \vec{\nabla} i|j\rangle \]
+  \item
+    \verb!cint1e_ipkin_cart!
+    \[0.5\langle \vec{\nabla} i| \vec{p} \cdot \vec{p} j\rangle \]
+  \item
+    \verb!cint1e_ipnuc_cart!
+    \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
+  \item
+    \verb!cint1e_iprinv_cart!
+    \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
+  \item
+    \verb!cint1e_rinv_cart! \[\langle i| r^{-1} |j\rangle \]
+  \item
+    \verb!cint2e_cart! \[(ij|kl)\]
+  \item
+    \verb!cint2e_ig1_cart! \[i(i U_g j|kl)\]
+  \item
+    \verb!cint2e_ip1_cart! \[(\vec{\nabla} i j|kl)\]
+  \end{itemize}
 \item
   Spheric GTO integrals
-\item
-  \verb!cgto_spheric!\\
-\item
-  \verb!cint1e_ovlp_sph! \[\langle  i| j\rangle \]
-\item
-  \verb!cint1e_nuc_sph! \[\langle  i| V_{nuc}| j\rangle \]
-\item
-  \verb!cint1e_kin_sph! \[0.5\langle i| \vec{p} \cdot pj\rangle \]
-\item
-  \verb!cint1e_ia01p_sph!
-  \[\langle i| \frac{\vec{r}}{r^3}| \times \vec{\nabla} j\rangle \]
-\item
-  \verb!cint1e_irxp_sph!
-  \[\langle i| \vec{r}_c \times \vec{\nabla} j\rangle \]
-\item
-  \verb!cint1e_iking_sph!
-  \[0.5i\langle \vec{p} \cdot \vec{p} i| U_gj\rangle \]
-\item
-  \verb!cint1e_iovlpg_sph! \[i\langle i| U_gj\rangle \]
-\item
-  \verb!cint1e_inucg_sph! \[i\langle i| V_{nuc}| U_gj\rangle \]
-\item
-  \verb!cint1e_ipovlp_sph! \[\langle \vec{\nabla} i|j\rangle \]
-\item
-  \verb!cint1e_ipkin_sph!
-  \[0.5\langle \vec{\nabla} i| \vec{p} \cdot pj\rangle \]
-\item
-  \verb!cint1e_ipnuc_sph!
-  \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
-\item
-  \verb!cint1e_iprinv_sph!
-  \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
-\item
-  \verb!cint1e_rinv_sph! \[\langle i| r^{-1} |j\rangle \]
-\item
-  \verb!cint2e_sph! \[(ij|kl)\]
-\item
-  \verb!cint2e_ig1_sph! \[i(i U_g j|kl)\]
-\item
-  \verb!cint2e_ip1_sph! \[(\vec{\nabla} i j|kl)\]
-
+  \begin{itemize}
+  \item
+    \verb!cgto_spheric(int ishell, int bas[])!: Number of spheric
+    functions of the given shell
+  \item
+    \verb!cint1e_ovlp_sph! \[\langle  i| j\rangle \]
+  \item
+    \verb!cint1e_nuc_sph! \[\langle  i| V_{nuc}| j\rangle \]
+  \item
+    \verb!cint1e_kin_sph! \[0.5\langle i| \vec{p} \cdot pj\rangle \]
+  \item
+    \verb!cint1e_ia01p_sph!
+    \[\langle i| \frac{\vec{r}}{r^3}| \times \vec{\nabla} j\rangle \]
+  \item
+    \verb!cint1e_irxp_sph!
+    \[\langle i| \vec{r}_c \times \vec{\nabla} j\rangle \]
+  \item
+    \verb!cint1e_iking_sph!
+    \[0.5i\langle \vec{p} \cdot \vec{p} i| U_gj\rangle \]
+  \item
+    \verb!cint1e_iovlpg_sph! \[i\langle i| U_gj\rangle \]
+  \item
+    \verb!cint1e_inucg_sph! \[i\langle i| V_{nuc}| U_gj\rangle \]
+  \item
+    \verb!cint1e_ipovlp_sph! \[\langle \vec{\nabla} i|j\rangle \]
+  \item
+    \verb!cint1e_ipkin_sph!
+    \[0.5\langle \vec{\nabla} i| \vec{p} \cdot pj\rangle \]
+  \item
+    \verb!cint1e_ipnuc_sph!
+    \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
+  \item
+    \verb!cint1e_iprinv_sph!
+    \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
+  \item
+    \verb!cint1e_rinv_sph! \[\langle i| r^{-1} |j\rangle \]
+  \item
+    \verb!cint2e_sph! \[(ij|kl)\]
+  \item
+    \verb!cint2e_ig1_sph! \[i(i U_g j|kl)\]
+  \item
+    \verb!cint2e_ip1_sph! \[(\vec{\nabla} i j|kl)\]
+  \end{itemize}
 \item
   Spinor GTO integrals
-\item
-  \verb!cgto_spinor!\\
-\item
-  \verb!cint1e_ovlp! \[\langle  i| j\rangle \]
-\item
-  \verb!cint1e_nuc! \[\langle  i| V_{nuc} |j\rangle \]
-\item
-  \verb!cint1e_nucg! \[\langle  i| V_{nuc} | U_gj\rangle \]
-\item
-  \verb!cint1e_srsr!
-  \[\langle \vec{\sigma}\cdot\vec{r} i| \vec{\sigma}\cdot\vec{r}j\rangle \]
-\item
-  \verb!cint1e_sr! \[\langle \vec{\sigma}\cdot\vec{r} i|j\rangle \]
-\item
-  \verb!cint1e_srsp!
-  \[\langle \vec{\sigma}\cdot\vec{r} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_spsp!
-  \[\langle \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_sp! \[\langle \vec{\sigma}\cdot\vec{p} i|j\rangle \]
-\item
-  \verb!cint1e_spspsp!
-  \[\langle \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p} \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_spnuc!
-  \[\langle \vec{\sigma}\cdot\vec{p} i| V_{nuc} |j\rangle \]
-\item
-  \verb!cint1e_spnucsp!
-  \[\langle \vec{\sigma}\cdot\vec{p} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_srnucsr!
-  \[\langle \vec{\sigma}\cdot\vec{r} i| V_{nuc} | \vec{\sigma}\cdot\vec{r}j\rangle \]
-\item
-  \verb!cint1e_sa10sa01!
-  \[0.5\langle\vec{\sigma} \times \vec{r}_c i|\vec{\sigma} \times \frac{\vec{r}}{r^3} |j\rangle \]
-\item
-  \verb!cint1e_ovlpg! \[\langle i|U_g j\rangle \]
-\item
-  \verb!cint1e_sa10sp!
-  \[0.5\langle\vec{r}_c \times\vec{\sigma} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_sa10nucsp!
-  \[0.5\langle\vec{r}_c \times\vec{\sigma} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_sa01sp!
-  \[\langle i| \frac{\vec{r}}{r^3} \times\vec{\sigma} | \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_spgsp!
-  \[\langle U_g \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_spgnucsp!
-  \[\langle U_g \vec{\sigma}\cdot\vec{p} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_spgsa01!
-  \[\langle U_g \vec{\sigma}\cdot\vec{p} i| \frac{\vec{r}}{r^3} \times\vec{\sigma} |j\rangle \]
-\item
-  \verb!cint1e_ipovlp! \[\langle \vec{\nabla} i|j\rangle \]
-\item
-  \verb!cint1e_ipkin!
-  \[0.5\langle \vec{\nabla} i| p \cdot pj\rangle \]
-\item
-  \verb!cint1e_ipnuc! \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
-\item
-  \verb!cint1e_iprinv! \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
-\item
-  \verb!cint1e_ipspnucsp!
-  \[\langle \vec{\nabla} \vec{\sigma}\cdot\vec{p} i| V_{nuc}| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint1e_ipsprinvsp!
-  \[\langle \vec{\nabla} \vec{\sigma}\cdot\vec{p} i| r^{-1}| \vec{\sigma}\cdot\vec{p}j\rangle \]
-\item
-  \verb!cint2e! \[(ij|kl)\]
-\item
-  \verb!cint2e_spsp1!
-  \[(\vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| k l)\]
-\item
-  \verb!cint2e_spsp1spsp2!
-  \[(\vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p} l)\]
-\item
-  \verb!cint2e_srsr1!
-  \[(\vec{\sigma}\cdot\vec{r} i \vec{\sigma}\cdot\vec{r} j| kl)\]
-\item
-  \verb!cint2e_srsr1srsr2!
-  \[(\vec{\sigma}\cdot\vec{r} i \vec{\sigma}\cdot\vec{r} j| \vec{\sigma}\cdot\vec{r} k \vec{\sigma}\cdot\vec{r}l)\]
-\item
-  \verb!cint2e_sa10sp1!
-  \[0.5 (\vec{r}_c \times\vec{\sigma} i \vec{\sigma}\cdot\vec{p} j| kl)\]
-\item
-  \verb!cint2e_sa10sp1spsp2!
-  \[0.5 (\vec{r}_c \times\vec{\sigma} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p} l)\]
-\item
-  \verb!cint2e_g1! \[(i U_g j| kl)\]
-\item
-  \verb!cint2e_spgsp1!
-  \[(\vec{\sigma}\cdot\vec{p} i U_g \vec{\sigma}\cdot\vec{p} j| kl)\]
-\item
-  \verb!cint2e_g1spsp2!
-  \[(i U_g j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
-\item
-  \verb!cint2e_spgsp1spsp2!
-  \[(\vec{\sigma}\cdot\vec{p} i U_g \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
-\item
-  \verb!cint2e_ip1! \[(\vec{\nabla} i j| kl)\]
-\item
-  \verb!cint2e_ipspsp1!
-  \[(\vec{\nabla} \vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| kl)\]
-\item
-  \verb!cint2e_ip1spsp2!
-  \[(\vec{\nabla} i j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
-\item
-  \verb!cint2e_ipspsp1spsp2!
-  \[(\vec{\nabla} \vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
-\item
-  \verb!cint2e_ssp1ssp2!
-  \[( i \vec{\sigma}\vec{\sigma}\cdot\vec{p} j|k \vec{\sigma}\vec{\sigma}\cdot\vec{p}l)\]
-
+  \begin{itemize}
+  \item
+    \verb!cgto_spinor(int ishell, int bas[])!: Number of spinor
+    functions of the given shell
+  \item
+    \verb!cint1e_ovlp! \[\langle  i| j\rangle \]
+  \item
+    \verb!cint1e_nuc! \[\langle  i| V_{nuc} |j\rangle \]
+  \item
+    \verb!cint1e_nucg! \[\langle  i| V_{nuc} | U_gj\rangle \]
+  \item
+    \verb!cint1e_srsr!
+    \[\langle \vec{\sigma}\cdot\vec{r} i| \vec{\sigma}\cdot\vec{r}j\rangle \]
+  \item
+    \verb!cint1e_sr! \[\langle \vec{\sigma}\cdot\vec{r} i|j\rangle \]
+  \item
+    \verb!cint1e_srsp!
+    \[\langle \vec{\sigma}\cdot\vec{r} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_spsp!
+    \[\langle \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_sp! \[\langle \vec{\sigma}\cdot\vec{p} i|j\rangle \]
+  \item
+    \verb!cint1e_spspsp!
+    \[\langle \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p} \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_spnuc!
+    \[\langle \vec{\sigma}\cdot\vec{p} i| V_{nuc} |j\rangle \]
+  \item
+    \verb!cint1e_spnucsp!
+    \[\langle \vec{\sigma}\cdot\vec{p} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_srnucsr!
+    \[\langle \vec{\sigma}\cdot\vec{r} i| V_{nuc} | \vec{\sigma}\cdot\vec{r}j\rangle \]
+  \item
+    \verb!cint1e_sa10sa01!
+    \[0.5\langle\vec{\sigma} \times \vec{r}_c i|\vec{\sigma} \times \frac{\vec{r}}{r^3} |j\rangle \]
+  \item
+    \verb!cint1e_ovlpg! \[\langle i|U_g j\rangle \]
+  \item
+    \verb!cint1e_sa10sp!
+    \[0.5\langle\vec{r}_c \times\vec{\sigma} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_sa10nucsp!
+    \[0.5\langle\vec{r}_c \times\vec{\sigma} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_sa01sp!
+    \[\langle i| \frac{\vec{r}}{r^3} \times\vec{\sigma} | \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_spgsp!
+    \[\langle U_g \vec{\sigma}\cdot\vec{p} i| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_spgnucsp!
+    \[\langle U_g \vec{\sigma}\cdot\vec{p} i| V_{nuc} | \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_spgsa01!
+    \[\langle U_g \vec{\sigma}\cdot\vec{p} i| \frac{\vec{r}}{r^3} \times\vec{\sigma} |j\rangle \]
+  \item
+    \verb!cint1e_ipovlp! \[\langle \vec{\nabla} i|j\rangle \]
+  \item
+    \verb!cint1e_ipkin!
+    \[0.5\langle \vec{\nabla} i| p \cdot pj\rangle \]
+  \item
+    \verb!cint1e_ipnuc! \[\langle \vec{\nabla} i| V_{nuc}|j\rangle \]
+  \item
+    \verb!cint1e_iprinv! \[\langle \vec{\nabla} i| r^{-1}|j\rangle \]
+  \item
+    \verb!cint1e_ipspnucsp!
+    \[\langle \vec{\nabla} \vec{\sigma}\cdot\vec{p} i| V_{nuc}| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint1e_ipsprinvsp!
+    \[\langle \vec{\nabla} \vec{\sigma}\cdot\vec{p} i| r^{-1}| \vec{\sigma}\cdot\vec{p}j\rangle \]
+  \item
+    \verb!cint2e! \[(ij|kl)\]
+  \item
+    \verb!cint2e_spsp1!
+    \[(\vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| k l)\]
+  \item
+    \verb!cint2e_spsp1spsp2!
+    \[(\vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p} l)\]
+  \item
+    \verb!cint2e_srsr1!
+    \[(\vec{\sigma}\cdot\vec{r} i \vec{\sigma}\cdot\vec{r} j| kl)\]
+  \item
+    \verb!cint2e_srsr1srsr2!
+    \[(\vec{\sigma}\cdot\vec{r} i \vec{\sigma}\cdot\vec{r} j| \vec{\sigma}\cdot\vec{r} k \vec{\sigma}\cdot\vec{r}l)\]
+  \item
+    \verb!cint2e_sa10sp1!
+    \[0.5 (\vec{r}_c \times\vec{\sigma} i \vec{\sigma}\cdot\vec{p} j| kl)\]
+  \item
+    \verb!cint2e_sa10sp1spsp2!
+    \[0.5 (\vec{r}_c \times\vec{\sigma} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p} l)\]
+  \item
+    \verb!cint2e_g1! \[(i U_g j| kl)\]
+  \item
+    \verb!cint2e_spgsp1!
+    \[(\vec{\sigma}\cdot\vec{p} i U_g \vec{\sigma}\cdot\vec{p} j| kl)\]
+  \item
+    \verb!cint2e_g1spsp2!
+    \[(i U_g j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
+  \item
+    \verb!cint2e_spgsp1spsp2!
+    \[(\vec{\sigma}\cdot\vec{p} i U_g \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
+  \item
+    \verb!cint2e_ip1! \[(\vec{\nabla} i j| kl)\]
+  \item
+    \verb!cint2e_ipspsp1!
+    \[(\vec{\nabla} \vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| kl)\]
+  \item
+    \verb!cint2e_ip1spsp2!
+    \[(\vec{\nabla} i j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
+  \item
+    \verb!cint2e_ipspsp1spsp2!
+    \[(\vec{\nabla} \vec{\sigma}\cdot\vec{p} i \vec{\sigma}\cdot\vec{p} j| \vec{\sigma}\cdot\vec{p} k \vec{\sigma}\cdot\vec{p}l)\]
+  \item
+    \verb!cint2e_ssp1ssp2!
+    \[( i \vec{\sigma}\vec{\sigma}\cdot\vec{p} j|k \vec{\sigma}\vec{\sigma}\cdot\vec{p}l)\]
+  \end{itemize}
 \end{itemize}
 
 \end{document}
