fix bug in function f_bra_cart2spinor_sf

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,3 +3,9 @@ Version 1.0 (2013/01/15):
 	* 1e/2e contracted cartensian/spheric/spinor GTO integarls
 	* common lisp script to generate integral code
 
+Version 1.1 (2013/05/29):
+	* optimize the transformation from Cartesian GTO to
+	  spheric/spinor GTO
+
+Version 1.1.1 (2013/05/29):
+	* fix bug in function f_bra_cart2spinor_sf
