--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.1.4 (2013/07/28):
+	* Small optimization for memory alloc in cint2e
+
+Version 1.1.3 (2013/06/19):
+	* Small optimization for matrix transposition
+
 Version 1.1.2 (2013/06/04):
 	* Change C/Fortran code examples.
 	* Update testsuits.
