--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.2 (2013/12/09):
+	* Fix bug for the cutoff threshold in 2e integrals
+	* Optimize 2e integrals for Segment-contracted basis
+
 Version 1.1.4 (2013/07/28):
 	* Small optimization for memory alloc in cint2e
 
