--- a/ChangeLog
+++ b/ChangeLog
@@ -1,27 +1,37 @@
-Version 1.2 (2013/12/09):
+Version 2.0 (2014-04-20):
+	* Change API
+	  - Add prefix CINT on built-in function to avoid name conliction
+	  - Change function prototype from
+		xxx(atm, natm, bas, nbas, env);
+	    to
+		xxx(atm, natm, bas, nbas, env, opt);
+	  - p function are oredered as px py pz for spheric GTOs.
+	* Add optimizer which can roughly speed up ERI by 10%
+
+Version 1.2 (2013-12-09):
 	* Fix bug for the cutoff threshold in 2e integrals
 	* Optimize 2e integrals for Segment-contracted basis
 
-Version 1.1.4 (2013/07/28):
+Version 1.1.4 (2013-07-28):
 	* Small optimization for memory alloc in cint2e
 
-Version 1.1.3 (2013/06/19):
+Version 1.1.3 (2013-06-19):
 	* Small optimization for matrix transposition
 
-Version 1.1.2 (2013/06/04):
-	* Change C/Fortran code examples.
+Version 1.1.2 (2013-06-04):
+	* Change C-Fortran code examples.
 	* Update testsuits.
 	* Add new integrals which appear in DHF-DKB calculation.
 
-Version 1.1.1 (2013/05/29):
+Version 1.1.1 (2013-05-29):
 	* Fix bug in function f_bra_cart2spinor_sf.
 
-Version 1.1 (2013/05/29):
+Version 1.1 (2013-05-29):
 	* Optimize the transformation from Cartesian GTO to
-	  spheric/spinor GTO.
+	  spheric-spinor GTO.
 
-Version 1.0 (2013/01/15):
+Version 1.0 (2013-01-15):
 	* First release.
-	* 1e/2e contracted cartensian/spheric/spinor GTO integarls.
+	* 1e-2e contracted cartensian-spheric-spinor GTO integarls.
 	* Common lisp script to generate integral code.
 
