--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.0.1 (2014-04-20):
+	* Fix a serious bug in optimizer
+
 Version 2.0 (2014-04-20):
 	* Change API
 	  - Add prefix CINT on built-in function to avoid name conliction
