--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.0.3 (2014-05-30):
+	* Add new integrals
+	* Update clisp script to handle new integrals
+
 Version 2.0.2 (2014-05-25):
 	* Small optimization
 
