--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 libcint
 =======
 
-version 2.0.7
+version 2.1.0
 2014-10-16
 
 
@@ -119,51 +119,34 @@ Installation
 
 * Prerequisites
     - BLAS library
-    - Python version 2.5 or higher (optional, for make check)
+    - Python version 2.5 or higher (optional, for make test)
     - clisp / SBCL (optional, for common lisp script)
 
 * Build libcint
     mkdir build; cd build
-    ../configure <options>
+    cmake ..
     make
+    make test ARGS=-V (optional)
     make install
-
-* Use Intel MKL as BLAS library
-    - MKL version 10.2 or older or CPU without Intel AVX instruction
-      ../configure --with-blas="-Wl,--start-group -L$MKLROOT/lib/intel64 \
-          -lmkl_intel_lp64 -lmkl_sequential -lmkl_core \
-          -Wl,--end-group -lpthread"
-    - MKL version 10.3 or newer and CPU with Intel AVX instruction
-      ../configure --with-blas="-Wl,--start-group -L$MKLROOT/lib/intel64 \
-          -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lmkl_avx \
-          -Wl,--end-group -lpthread"
-    - Link flags of other MKL version refers to the online MKL link advisor
-      http://software.intel.com/sites/products/mkl/
 
 
 Known problems
 --------------
 
-* On 64-bit system, "make check" stop with error:
+* On 64-bit system, "make test" stop with error:
 
     MKL FATAL ERROR: Cannot load libmkl_avx.so or libmkl_def.so.
 
   This problem is caused by the conflict between Python and MKL library.
   It can be fixed by adding -lmkl_avx or -lmkl_mc -lmkl_def to MKL link
   flags to replace the default blas link flags.  Be careful with the
-  *order* of -lmkl_mc and -lmkl_def.  e.g.
-    ../configure --with-blas="-Wl,--start-group -L$MKLROOT/lib/intel64 \
-        -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lmkl_mc -lmkl_def \
-        -Wl,--end-group -lpthread"
+  *order* of -lmkl_mc and -lmkl_def.
 
 * For plain ERI, the code can handle highest angular momentum up to 6
   (present Rys-roots functions might be numerically unstable for l=5,6).
   But it has to be reduced to 5 or less for derivative or high order ERI.
   Depending on the derivative order, reduce 1 highest angular momentum
   every 4 derivative order.
-
-* If stack size < 6.5 MB, Segmentation fault may occur in function
-  c2s_sph_2e1 for angular momentum l=6
 
 * For portability, SSE instructions was not applied in this version.
   Using SSE3 instructions can increase the performance 5 ~ 50%.
